# node-kyber-1024

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makeNodeAddon.sh  makeTSNode.sh  package-lock.json  package.json  ts-install.sh  tsconfig.json
docs/: README.md  globals.md
docs/classes/: _index_.kyber.md
docs/interfaces/: _index_.keys.md
docs/modules/: _index_.md
lib/: index.d.ts  index.d.ts.map  index.js  index.js.map  node-kyber.d.ts  node-kyber.node
readmeHeader/: readhead.md
scripts/: clean.js
src/: CMakeLists.txt  api.h  index.ts  kyber1024.cc  kyber1024.h
test/: test.js
